2008-11-12  Pere Laszlo  <ext-laszlo.pere@nokia.com>

        Make the operator name move out of the way of the status
	area when it resizes.
	closes bug #88444
        patch number 36447
	reviewed by: Thomas Thurman

	* src/home/hd-home.c: add new function
          hd_home_status_area_allocation_changed() to fix up the
	  position of the operator name, attached as a callback
	  to the size changing signal of the status area
	* src/home/hd-switcher.c: add comment describing function

2008-11-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

  * src/mb/hd-comp-mgr.c:
    Don't add windows marked as SkipTaskbar to the task switcher.

2008-11-12  Adam Endrodi  <adam.endrodi@blumsoft.eu>

  Do a TV-turned-off-like effect when an application is closed
  in switcher view.

  * src/home/hd-switcher.c:
    Keep the switcher open while the effect is running.
  * src/home/hd-task-navigator.h
  * src/home/hd-task-navigator.c:
    Take advantage of clutter_actor_set_anchor_point_from_gravity().
  * src/mb/hd-comp-mgr.c:
    Disable its own TV-turned-off effect in switcher view.
  * TODO:
    Switcher-related todos updated.

2008-11-11  Adam Endrodi  <adam.endrodi@blumsoft.eu>

  * src/mb/hd-comp-mgr.c:
    Fix r31798's patch application which left the application's
    thumbnail in the switcher.

2008-11-10  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/Makefile.am: Add new hd-task-manager.[ch] and
	hd-add-task-dialog.[ch] files.

	* src/home/hd-edit-menu.c (hd_edit_menu_item_release): Add support for
	Add shortcut dialog.

	* src/home/hd-task-manager.c:
	* src/home/hd-task-manager.h: Add class to load the available tasks
	from the .desktop files (used by the Add shortcut dialog).

	* src/home/hd-add-task-dialog.c:
	* src/home/hd-add-task-dialog.h: Add class which implements the Add
	shortcut dialog

	* src/home/hd-applet-manager.c (items_configuration_loaded_cb): Fix
	bug in i18n code.

2008-11-07  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
